--- a/env/example.env
+++ b/env/example.env
@@ -1,8 +1,9 @@
-IP = 
-PORT = 
+#SERVER
+IP = "0.0.0.0"
+PORT = "8000"
 #DATABASE
-DB_USER =
-DB_PASSWORD =
-DB_NETWORK = 
-DB_ADDRESS = 
-DB_NAME = 
+DB_USER = "root"
+DB_PASSWORD = ""
+DB_NETWORK = "tcp"
+DB_ADDRESS = "127.0.0.1:3306"
+DB_NAME = "messaging_db"
