env variables for auth

--- a/env/example.env
+++ b/env/example.env
@@ -1,6 +1,10 @@
 #SERVER
 IP = "0.0.0.0"
 PORT = "8000"
+#AUTH
+AUTH_PROTOCOL = "https"
+AUTH_IPV6 = "0000:0000:000:000::0000"
+AUTH_PORT = "80"
 #DATABASE
 DB_USER = "root"
 DB_PASSWORD = ""
